<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/medication_image"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:clipToOutline="true"
            android:contentDescription="@string/medication_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/medication_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/medication_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_image"
            tools:text="@string/medication_name" />

        <TextView
            android:id="@+id/medication_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_name"
            tools:text="@string/medication_info" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/where_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_buy"
            android:gravity="center"
            android:textColor="#000000"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
