<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@android:color/transparent"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/medication_image"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:clipToOutline="true"
            android:contentDescription="@string/medication_image"
            android:gravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/medication_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@id/medication_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_image"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#000000"
            android:textFontWeight="600"
            android:textSize="14sp"
            tools:text="@string/medication_name" />

        <TextView
            android:id="@+id/medication_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#AEB0B6"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/medication_name"
            tools:text="@string/medication_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
